# A-Time-Series-Data-Driven-RF-XGBoost-Hybrid-Migration-Learning-Model

./: .gitattributes  .gitignore  LICENSE.md  LightGBM.py  MLP.py  README.md  RF.py  SVM.py  XGBoost.py  config.py  count_each_pipeline_error.py  flow_chart.drawio  load_data.py  pyproject.toml  test.py  未命名绘图.drawio
data/: M101.csv
data/raw/: readme.md
examples/: feature_processing_example.py  feature_selecting_example.py  load_data_example.py  sampling_example.py
feature/: 4002_selected_features.csv  5001_selected_features.csv  5002_selected_features.csv
model/: 1001_selected_features.csv  2001_selected_features.csv  4001_selected_features.csv  4002_selected_features.csv  4003_selected_features.csv  5001_selected_features.csv  5002_selected_features.csv  6001_selected_features.csv  6002_selected_features.csv  xgboost1001_101.model.pkl  xgboost1001_101_results.txt  xgboost4001_101.model.pkl  xgboost4001_101_results.txt  xgboost4002_101.model.pkl  xgboost4002_101_results.txt  xgboost4002_103.model.pkl  xgboost4002_104.model.pkl  xgboost4003_101.model.pkl  xgboost4003_101_results.txt  xgboost4003_102.model.pkl  xgboost4003_102_results.txt  xgboost5001_101.model.pkl  xgboost5001_101_results.txt  xgboost5001_102.model.pkl  xgboost5001_103.model.pkl  xgboost5001_104.model.pkl  xgboost5002_101.model.pkl  xgboost5002_101_results.txt  xgboost6001_101.model.pkl  xgboost6001_101_results.txt  xgboost6002_101.model.pkl  xgboost6002_101_results.txt
report/: xgboost4002_101_results.txt  xgboost4002_103_results.txt  xgboost4002_104_results.txt  xgboost5001_101_results.txt  xgboost5001_102_results.txt  xgboost5001_103_results.txt  xgboost5001_104_results.txt  xgboost5002_101_results.txt
scripts/: analyze_experiments.py  fault_analysis.py  generate_report.py  select_features.py  temporalize_dataset.py  train_batch.py  train_lightgbm.py  train_lstm.py  train_mlp.py  train_svm.py  train_xgboost.py  train_xgboost_multiple_runs.py  train_xgboost_varied_runs.py
trained_models/: readme.md
utils/: balance_subset.py  base_utils.py  caculate_ks.py  count_zero_nonzero_attributes.py  custom_score.py  data_loader.py  data_process.py  experiment_analyzer.py  feature_utils.py  get_fault_description.py  load_data.py  load_pre_trained_model.py  model_evaluation.py  progress_display.py  split_train_test_datasets.py
(+19 files in other folders)
